--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NVDB Vegobjekt Visualisering (BETA)</title>
+    <title>NVDB Finn Vegdata (BETA)</title>
     <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
